# stm-api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
core/: client.py  config.py  main.py
core/models/stm/: static.py
core/routers/: __init__.py  health.py  vehicles.py
core/routers/stm/: __init__.py  static.py
core/services/: trips.py
core/services/stm/: static.py
core/static/stm/: db.py  loader.py  models.py
tests/: conftest.py  test_health.py  test_routes.py  test_static.py  test_stops.py  test_trips.py  test_vehicles.py
